# imu_prod_cons

./: .gitignore  CMakeLists.txt  IMU.csv  README.md
.github/workflows/: build.yml
include/: concrete_imu_data_factory.h  csv_imu_data.h  imu_data.h  imu_data_factory.h  imu_data_provider.h  log_utils.h  payload.h  random_imu_data.h
src/: ahrs_processor.cpp  ahrs_processor.hpp  concrete_imu_data_factory.cpp  concrete_imu_data_factory.hpp  cons.cpp  cons_main.cpp  consumer.cpp  consumer.hpp  csv_imu_data.cpp  csv_imu_data.hpp  imu_data.hpp  imu_data_factory.hpp  imu_data_provider.hpp  log_utils.cpp  log_utils.hpp  prod.cpp  prod_main.cpp  producer.cpp  producer.hpp  random_imu_data.hpp  rt_utils.hpp  socket_handler.cpp  socket_handler.hpp
